<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="accept">Accept</string>
    <string name="achievement_ambassador">CgkI-N3q0q4DEAIQCQ</string>
    <string name="achievement_background_check">CgkI-N3q0q4DEAIQGA</string>
    <string name="achievement_bonjour">CgkI-N3q0q4DEAIQAQ</string>
    <string name="achievement_bounty_hunter">CgkI-N3q0q4DEAIQDA</string>
    <string name="achievement_critic">CgkI-N3q0q4DEAIQCg</string>
    <string name="achievement_deployed">CgkI-N3q0q4DEAIQFg</string>
    <string name="achievement_easter_egg">CgkI-N3q0q4DEAIQCw</string>
    <string name="achievement_engineer">CgkI-N3q0q4DEAIQEQ</string>
    <string name="achievement_explorer">CgkI-N3q0q4DEAIQFA</string>
    <string name="achievement_facebook_effect">CgkI-N3q0q4DEAIQCA</string>
    <string name="achievement_google_guru">CgkI-N3q0q4DEAIQEw</string>
    <string name="achievement_in_the_air">CgkI-N3q0q4DEAIQEg</string>
    <string name="achievement_iron_man">CgkI-N3q0q4DEAIQBQ</string>
    <string name="achievement_iron_patriot">CgkI-N3q0q4DEAIQBA</string>
    <string name="achievement_jukebox">CgkI-N3q0q4DEAIQEA</string>
    <string name="achievement_news_anchor">CgkI-N3q0q4DEAIQGw</string>
    <string name="achievement_noted">CgkI-N3q0q4DEAIQFQ</string>
    <string name="achievement_oh_i_forgot">CgkI-N3q0q4DEAIQGg</string>
    <string name="achievement_optimist">CgkI-N3q0q4DEAIQAw</string>
    <string name="achievement_social_network">CgkI-N3q0q4DEAIQBw</string>
    <string name="achievement_souvenir">CgkI-N3q0q4DEAIQHA</string>
    <string name="achievement_telegram">CgkI-N3q0q4DEAIQDQ</string>
    <string name="achievement_tony_stark">CgkI-N3q0q4DEAIQDw</string>
    <string name="achievement_wakey_wakey">CgkI-N3q0q4DEAIQDg</string>
    <string name="achievement_weather_man">CgkI-N3q0q4DEAIQFw</string>
    <string name="action_settings">Settings</string>
    <string name="action_upgrade">Upgrade</string>
    <string name="app_id">115600961272</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="app_name">Jarvis</string>
    <string name="app_name_pro">Jarvis PRO</string>
    <string name="banner_ad_unit_id">ca-app-pub-4677749345332883/4592887855</string>
    <string name="banner_int_unit_id">ca-app-pub-4677749345332883/5650818652</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="description">"You can set reminders like ...

When I talk to John, Remind me to ask about his new phone"</string>
    <string name="pref_description_auto_delete">Delete the shown reminder after the call ends</string>
    <string name="pref_description_background">Change your home screen wallpapers automatically</string>
    <string name="pref_description_bluetooth">BETA: Integrate over bluetooth headset</string>
    <string name="pref_description_jwear_news_notif">Get full readable news cards on wearable</string>
    <string name="pref_description_manage_jwear">Manage how Jarvis connects with your Android Wearables</string>
    <string name="pref_description_manage_notif">Select what you need to be notified</string>
    <string name="pref_description_news_notif">Get daily news updates</string>
    <string name="pref_description_night_mode">Keep Quiet from 9PM to 7AM</string>
    <string name="pref_description_office_mode">Mute notifications during 9AM to 5PM on Weekdays</string>
    <string name="pref_description_persistent_jwear">Always stay on top of the wearable device for quick info &amp; access</string>
    <string name="pref_description_pr">Get reminders for people when you make or get calls</string>
    <string name="pref_description_taunt">Let Jarvis greet you when opening or closing the app</string>
    <string name="pref_description_voice_notif">"Enable Jarvis's voice in notifications"</string>
    <string name="pref_description_weather_notif">Get daily weather alerts</string>
    <string name="pref_gender_address">Address me as</string>
    <string name="pref_music_player">Music player</string>
    <string name="pref_speech_source">Speech Recognition</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_title_auto_delete">Auto delete reminder</string>
    <string name="pref_title_background">Update wallpaper</string>
    <string name="pref_title_battery_notif">Battery</string>
    <string name="pref_title_bluetooth">Bluetooth Integration</string>
    <string name="pref_title_call_notif">Incoming calls</string>
    <string name="pref_title_display_position">Reminder display position</string>
    <string name="pref_title_enable">Enable</string>
    <string name="pref_title_enabled">Enable notification</string>
    <string name="pref_title_jarvis_wear">Jarvis Wear</string>
    <string name="pref_title_manage_notif">Manage notifications</string>
    <string name="pref_title_missed_notif">Missed calls</string>
    <string name="pref_title_music">Music</string>
    <string name="pref_title_news_notif">News updates</string>
    <string name="pref_title_night_mode">Quiet hours</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_title_office_mode">Office hours</string>
    <string name="pref_title_pr">People reminders</string>
    <string name="pref_title_reminder">Reminders</string>
    <string name="pref_title_sms_notif">SMS</string>
    <string name="pref_title_taunt">Greetings</string>
    <string name="pref_title_voice_notif">Enable Voice</string>
    <string name="pref_title_wear">Wearables</string>
    <string name="pref_title_weather_notif">Weather updates</string>
    <string name="pref_title_weather_unit">Units</string>
    <string name="reminder_count">0 reminders</string>
    <string name="select_contact">Select a contact</string>
</resources>