<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="top" android:layout_gravity="top" android:background="#c0ffffff" android:paddingLeft="@dimen/pr_activity_horizontal_margin" android:paddingTop="@dimen/pr_activity_vertical_margin" android:paddingRight="@dimen/pr_activity_horizontal_margin" android:paddingBottom="@dimen/pr_activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="top" android:orientation="vertical" android:background="@drawable/abc_menu_dropdown_panel_holo_light" android:animationCache="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_marginRight="@dimen/activity_horizontal_margin">
        <RelativeLayout android:orientation="vertical" android:id="@id/wrapper" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="300.0dip" android:layout_alignParentLeft="true" android:animateLayoutChanges="true">
            <LinearLayout android:orientation="horizontal" android:id="@id/panelLogo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip">
                <ImageView android:visibility="gone" android:layout_width="50.0dip" android:layout_height="wrap_content" android:src="@drawable/icon_pro" />
                <TextView android:textSize="25.0dip" android:textStyle="bold" android:textColor="@color/light_grey" android:id="@id/lblLogoText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="People Reminder" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/speechProgress" android:background="@drawable/circle" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="-20.0dip" android:layout_marginRight="-20.0dip" android:layout_alignParentRight="true" />
            <LinearLayout android:orientation="vertical" android:id="@id/panelCenter" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/panelLogo" android:layout_alignParentLeft="true">
                <TextView android:textSize="18.0sp" android:textColor="@color/year" android:id="@id/lblStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_pad_margin" android:text="@string/description" />
                <LinearLayout android:orientation="vertical" android:id="@id/panelConfirmation" android:background="@drawable/list_row_bg_hover" android:padding="10.0dip" android:visibility="gone" android:animationCache="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_pad_margin" android:layout_marginTop="20.0dip" android:layout_marginRight="@dimen/activity_pad_margin" android:layout_marginBottom="@dimen/activity_pad_margin">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="Remind " />
                    <EditText android:id="@id/confirmReminderText" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="When talking to" />
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/panelContactSelection" android:background="@drawable/white_gradient" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <ImageView android:id="@id/imgContact" android:background="@color/bbutton_default_pressed" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_action_user" android:layout_alignParentLeft="true" />
                        <TextView android:id="@id/lblContactName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/select_contact" android:layout_toRightOf="@id/imgContact" android:layout_centerVertical="true" />
                    </LinearLayout>
                    <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/activity_horizontal_margin">
                        <Button android:textColor="@color/theme_red_light" android:id="@id/btnCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="Cancel" />
                        <Button android:textColor="@color/green" android:id="@id/btnConfirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="Confirm" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <ListView android:id="@id/lstContacts" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="50.0dip" android:layout_below="@id/panelCenter" />
            <Button android:id="@id/btnViewAll" android:background="@color/theme" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="View all" android:layout_above="@id/lstContacts" android:layout_alignParentRight="true" />
            <LinearLayout android:orientation="vertical" android:id="@id/tabReminderHeader" android:background="@drawable/abc_menu_dropdown_panel_holo_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="-8.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
                <TextView android:textColor="@color/white" android:id="@id/lblReminderCount" android:background="@drawable/theme_tab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reminder_count" />
            </LinearLayout>
            <ImageView android:id="@id/btnType" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_action_keyboard" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>